@@ -1,5 +1,11 @@
 2005-08-08  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/Printer.cpp:
+
+	Use kRangeAllPages here.
+
+2005-08-08  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/main.cpp:
 
 	Don't load the scrollbar-preventing stylesheet for print mode, since
